[tool.poetry]
name = "u8l4-coincollector"
version = "0.1.0"
description = ""
authors = ["Marcus Jones <marcusjones8119@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
